--- a/templates/register.html
+++ b/templates/register.html
@@ -11,11 +11,13 @@
       <h2 class="text-center">Login</h2>
       {% if error %}<div class="alert alert-danger">{{ error }}</div>{% endif %}
       <form method="POST">
-        <input type="text" class="form-control mb-3" name="username" placeholder="Username" required>
+        <input type="text" class="form-control mb-3" name="firstname" placeholder="First Name" required>
+        <input type="text" class="form-control mb-3" name="lastname" placeholder="Last Name" required>
+        <input type="text" class="form-control mb-3" name="email" placeholder="Email" required>
         <input type="password" class="form-control mb-3" name="password" placeholder="Password" required>
-        <button type="submit" class="btn btn-success w-100">Login</button>
+        <input type="password" class="form-control mb-3" name="verifypassword" placeholder="Verify Password" required>
+        <button type="submit" class="btn btn-success w-100">Register</button>
       </form>
-      <p class="text-center mt-2">New user? <a href="{{ url_for('register') }}">Register</a></p>
     </div>
   </div>
 </body>
