--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     <h2>Login</h2>
     {% if error %}<div class="error">{{ error }}</div>{% endif %}
     <form method="POST">
-      <input type="text" name="username" placeholder="Username" required>
+      <input type="text" class="form-control mb-3" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Password" required>
       <button type="submit">Login</button>
     </form>
